--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@ $white: #ffffff;
 .textoHome {
   position: relative;
   font-family: "Roboto Flex", sans-serif;
+  margin: 20px;
 }
 
 .img-camara {
@@ -28,16 +29,14 @@ $white: #ffffff;
   z-index: 1;
 }
 
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: $color-primario;
-  padding: 10px 20px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 2;
+.text-brand {
+  text-decoration: none;
+}
+
+.navbar-text {
+  color: $white;
+  font-family: "Roboto Flex", sans-serif;
+  font-size: 16px;
 }
 
 .logo-container {
@@ -55,37 +54,56 @@ $white: #ffffff;
 .tooltip {
   display: none;
 }
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: $color-primario;
+  padding: 10px 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+}
 
-.navbar-list {
+// .navbar-item {
+//   text-decoration: underline; /* Subrayar el texto */
+// }
+
+/* Estilos base para los enlaces y texto del navbar */
+.navbar-list,
+.navbar-text {
   list-style: none;
   margin: 0;
   padding: 0;
-  display: flex;
-  align-items: center;
-}
-
-.navbar-item {
-  margin-right: 20px;
-}
-
-.navbar-item:last-child {
-  margin-right: 0;
-}
-
-.navbar-item a,
-.navbar-text {
-  color: $white;
   font-family: "Roboto Flex", sans-serif;
+}
+
+.navbar-item a {
+  color: $white;
   text-decoration: none;
   transition: color 0.3s;
 }
 
+/* Estilos para el enlace activo */
+.navbar-item a.active {
+  color: $color-secundario;
+  text-decoration: underline !important; /* Subrayar el enlace activo */
+}
+
+/* Estilos para el enlace en hover */
 .navbar-item a:hover {
   color: $color-secundario;
 }
 
-.navbar-item {
-  text-decoration: underline; /* Subrayar el texto */
+/* Elimina el subrayado predeterminado en todos los enlaces del navbar */
+.navbar-text {
+  text-decoration: none;
+}
+
+/* Espaciado entre los elementos del navbar */
+.navbar-item:not(:last-child) {
+  margin-right: 16px;
 }
 
 .epigrafeTituloHome {
@@ -131,7 +149,6 @@ $white: #ffffff;
   background-color: $color-secundario;
 }
 
-
 .texto-final-home {
   flex: 1;
 }
@@ -168,6 +185,15 @@ $white: #ffffff;
   color: $color-secundario;
 }
 
+a.whatsapp-footer {
+  text-decoration: none;
+  color: $white;
+}
+
+a.whatsapp-footer:hover {
+  color: $color-secundario;
+}
+
 /* ESTUDIOS-JOBS */
 .work-cards {
   display: grid;
@@ -189,11 +215,26 @@ $white: #ffffff;
   color: $white;
 }
 
+.texto-gibran {
+  position: absolute;
+  background-color: black;
+  color: white;
+  top: 200px;
+  left: 0px;
+}
+
+.texto-hero-jobs {
+  font-family: "Poiret One", cursive;
+  font-size: 20px !important;
+  color: $white;
+}
+
 .card-grid {
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 40px;
+  margin-left: 20px;
 }
 
 .card {
@@ -203,6 +244,7 @@ $white: #ffffff;
   text-align: center;
   width: 20rem;
 }
+
 .image-container {
   display: flex;
   justify-content: center;
@@ -244,11 +286,13 @@ $white: #ffffff;
 
 .skills-section {
   background-color: $color-secundario;
+  padding-top: 1rem;
+  padding-left: 3rem;
 }
 
 .skillsTitle {
   font-family: "Playfair Display SC", serif;
-  font-size: 36px;
+  font-size: 28px;
   color: $color-primario;
   padding: 120px 0px 64px 0px;
 }
@@ -390,4 +434,129 @@ header {
   font-family: "Raleway", sans-serif;
   font-size: 20px;
   color: $color-primario;
+}
+
+/* Media query para pantallas pequeñas */
+
+@media (max-width: 769px) {
+  .card-grid {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 20px;
+    margin-left: 0px;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 18rem;
+  }
+
+  .work-cards {
+    grid-template-columns: 1fr;
+    justify-content: center;
+    padding-left: 10px;
+  }
+
+  .skillsTitle {
+    font-family: "Playfair Display SC", serif;
+    font-size: 24px;
+    color: $color-primario;
+    padding: 120px 0px 64px 0px;
+  }
+  .skills-subtitle {
+    font-family: "Raleway", sans-serif;
+    font-size: 20px !important ;
+    font-weight: 400;
+    letter-spacing: 3px;
+    color: $white;
+  }
+
+  .skills-list {
+    font-family: "Raleway", sans-serif;
+    font-size: 16px !important;
+    color: $white;
+  }
+
+  .icon-tools-section {
+    display: none;
+  }
+
+  .texto-gibran {
+    position: absolute;
+    background-color: black;
+    color: white;
+    top: 100px;
+    left: 0px;
+  }
+
+  .texto-hero-jobs {
+    font-family: "Poiret One", cursive;
+    font-size: 12px !important;
+    color: $white;
+  }
+
+  .hero-text {
+    font-family: "Playfair Display SC", serif;
+    font-size: 20px;
+    color: $white;
+  }
+
+  .proyects-title {
+    font-family: "Playfair Display SC", serif;
+    font-size: 20px !important;
+    color: $color-primario;
+    margin: 20px 40px;
+  }
+
+  .accordion-button {
+    font-size: 20px !important;
+  }
+
+  .textoHome {
+    margin: 8px;
+  }
+
+  .final-home {
+    display: none;
+  }
+  #rio-biobio {
+    display: none;
+  }
+}
+
+@media (min-width: 770px) {
+
+  .galeria-home{
+    display: none;
+  }
+}
+
+@media (max-width: 1025px) {
+  #card-jobs {
+    width: 18rem;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 30px;
+  }
+  .work-cards {
+    padding-left: 20px;
+  }
+
+  .skills-section {
+    padding-left: 5rem;
+  }
+
+  .icon-tools-section {
+    display: none;
+  }
+  .img-skills {
+    display: none;
+  }
+  .final-studies {
+    display: none;
+  }
 }
