--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 $color-primario: #222222;
 $color-secundario: #ff4500;
-$white: #ffffff;
+$white: hwb(0 100% 0%);
+$grey: #e2e2e2;
 
 .textoHome {
   position: relative;
@@ -368,16 +369,16 @@ header {
 }
 
 #socialIconsList li {
-  margin: 0 10px; /* Espacio entre los íconos */
+  margin: 0 10px;
   list-style: none;
 }
 
 #footerContainer {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Esto centrará los elementos horizontalmente */
-  text-align: center; /* Esto centrará el texto dentro de los elementos */
-  padding: 0px; /* Espacio interior opcional */
+  align-items: center; 
+  text-align: center;
+  padding: 0px;
 }
 
 .final-studies {
@@ -432,6 +433,103 @@ header {
   font-family: "Raleway", sans-serif;
   font-size: 20px;
   color: $color-primario;
+}
+
+// COVER
+.cover-line {
+height: 20px;
+background-color: $color-secundario;
+}
+
+.epigrafeTituloCover {
+  font-family: "Raleway", sans-serif;
+  font-size: 40px !important ;
+  font-weight: 100;
+  letter-spacing: 3px;
+}
+
+.cover-ingresar{
+margin-top: 80px;
+}
+
+.parrafo-cover {
+  font-family: "Raleway", sans-serif;
+  font-size: 16px !important ;
+  font-weight: 200;
+  letter-spacing: 3px;
+}
+
+.boton-cover {
+  font-family: "Raleway", sans-serif;
+  font-size: 16px !important ;
+  font-weight: 200;
+  letter-spacing: 3px;
+  background-color:$grey;
+}
+
+// ANIMACION COVER
+.loading-screen{
+  width: 100%;
+  // height: 100vh;
+  background-color: #ffffff;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content:start;
+}
+
+.loading{
+  width: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  animation: rotate 3s linear infinite;
+}
+
+@keyframes rotate{
+  to{
+    transform: rotate(360deg);
+  }
+}
+
+.loading span{
+  width: 32px;
+  height: 32px;
+  background-color: red;
+  margin: 3px;
+  animation: scale 1.5s linear infinite;
+}
+
+@keyframes scale{
+  50%{
+    transform: scale(1.2);
+  }
+}
+
+.loading span:nth-child(1){
+  border-radius: 50% 50% 0 50%;
+  background-color: #FABEA7;
+  transform-origin: bottom right;
+}
+
+.loading span:nth-child(2){
+  border-radius: 50% 50% 50% 0;
+  background-color: #BFCCB5;
+  transform-origin: bottom left;
+  animation-delay: .5s;
+}
+
+.loading span:nth-child(3){
+  border-radius: 50% 0 50% 50%;
+  background-color: #B7B7B7;
+  transform-origin: top right;
+  animation-delay: 1.5s;
+}
+
+.loading span:nth-child(4){
+  border-radius: 0 50% 50% 50%;
+  background-color: #FBE2E5;
+  transform-origin: top left;
+  animation-delay: 1s;
 }
 
 /* Media query para pantallas pequeñas */
@@ -571,4 +669,205 @@ header {
   .final-studies {
     display: none;
   }
+}
+
+// TITULO COVER
+$thick : 2px;
+$pad : 0.5em;
+$extra : calc(#{$pad} * 1.2);
+// $color : #f26522;
+
+
+.portfolio-experiment {
+  // background: #2d2d2d;
+  
+  a {
+    color: $white;
+    padding: $pad $extra;
+    display: inline-block;
+    border: $thick solid transparent;
+    position: relative;
+    font-size: 1em;
+    // cursor: pointer;
+    letter-spacing: 0.07em;
+
+    .text {
+      padding: 0 0.3em;
+      font-family: "Raleway", sans-serif;
+      font-weight: 200;
+      transform: translate3d(0,$pad,0);
+      display: block;
+      transition: transform 0.4s cubic-bezier(.2,0,0,1) 0.4s;
+    }
+
+    &:after {
+      position: absolute;
+      content: '';
+      bottom: -$thick;
+      left: $extra;
+      right: $extra;
+      height: $thick;
+      background: $color-secundario;
+      // z-index: -1;
+      transition: 
+        transform 0.8s cubic-bezier(1,0,.37,1) 0.2s,
+        right 0.2s cubic-bezier(.04,.48,0,1) 0.6s,
+        left 0.4s cubic-bezier(.04,.48,0,1) 0.6s;
+      transform-origin: left;
+    }
+
+  }
+
+  .line {
+    position: absolute;
+    background: $color-secundario;
+
+    &.-right,
+    &.-left {
+      width: $thick;
+      bottom: -$thick;
+      top: -$thick;
+      transform: scale3d(1,0,1);
+    }  
+
+    &.-top,
+    &.-bottom {
+      height: $thick;
+      left: -$thick;
+      right: -$thick;
+      transform: scale3d(0,1,1);
+    }
+
+    &.-right {
+      right: -$thick;
+      transition: transform 0.1s cubic-bezier(1,0,.65,1.01) 0.23s;
+      transform-origin: top;
+    }
+
+    &.-top {
+      top: -$thick;
+      transition: transform 0.08s linear 0.43s;
+      transform-origin: left;
+    }
+
+    &.-left {
+      left: -$thick;
+      transition: transform 0.08s linear 0.51s;
+      transform-origin: bottom;
+    }
+
+    &.-bottom {
+      bottom: -$thick;
+      transition: transform 0.3s cubic-bezier(1,0,.65,1.01);
+      transform-origin: right;
+    }  
+  }
+
+  a:hover,
+  a:active {
+
+    .text {
+      transform: translate3d(0,0,0);
+      transition: transform 0.6s cubic-bezier(.2,0,0,1) 0.4s;
+    }
+
+    &:after {
+      transform: scale3d(0,1,1);
+      right: -$thick;
+      left: -$thick;
+      transform-origin: right;
+      transition: 
+        transform 0.2s cubic-bezier(1,0,.65,1.01) 0.17s,
+        right 0.2s cubic-bezier(1,0,.65,1.01),
+        left 0s 0.3s;
+    }
+
+    .line {
+      transform: scale3d(1,1,1);
+
+      &.-right {
+        transition: transform 0.1s cubic-bezier(1,0,.65,1.01) 0.2s;
+        transform-origin: bottom;
+      }
+
+      &.-top {
+        transition: transform 0.08s linear 0.4s;
+        transform-origin: right;
+      }
+
+      &.-left {
+        transition: transform 0.08s linear 0.48s;
+        transform-origin: top;
+      }
+
+      &.-bottom {
+        transition: transform 0.5s cubic-bezier(0,.53,.29,1) 0.56s;
+        transform-origin: left;
+      }
+    }
+
+  }
+}
+
+// boton prueba 2
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.cta {
+  position: relative;
+  margin: auto;
+  padding: 19px 22px;
+  transition: all 0.2s ease;
+}
+.cta:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  border-radius: 28px;
+  background: rgba(255, 171, 157, 0.5);
+  width: 56px;
+  height: 56px;
+  transition: all 0.3s ease;
+}
+.cta span {
+  position: relative;
+  font-family: "Playfair Display SC", serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+  vertical-align: middle;
+}
+.cta svg {
+  position: relative;
+  top: 0;
+  margin-left: 48px;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke: #111;
+  stroke-width: 2;
+  transform: translateX(-5px);
+  transition: all 0.3s ease;
+}
+.cta:hover:before {
+  width: 100%;
+  background: $color-secundario;
+}
+.cta:hover  {
+  color: $white;
+}
+.cta:hover svg {
+  transform: translateX(0);
+  stroke: $white;
+}
+.cta:active {
+  transform: scale(0.96);
 }
