--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -327,7 +327,7 @@ header {
 
 .nav-link {
   font-family: "Roboto Flex", sans-serif;
-  font-size: 20px;
+  // font-size: 20px;
   color: dimgrey;
 }
 
@@ -378,7 +378,7 @@ header {
   flex-direction: column;
   align-items: center; 
   text-align: center;
-  padding: 0px;
+  // padding: 0px;
 }
 
 .final-studies {
@@ -548,7 +548,8 @@ margin-top: 80px;
   }
 
   .text-footer-game{
-    font-family: "Raleway", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
+    font-weight: 200;
     color:$white;
     font-size: 16px;
   }
@@ -834,7 +835,7 @@ $extra : calc(#{$pad} * 1.2);
   }
 }
 
-// boton prueba 2
+// boton game
 
 a {
   text-decoration: none;
