cambio de texto en index

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -107,7 +107,7 @@ $grey: #e2e2e2;
 
 .epigrafeTituloHome2 {
   font-family: "Raleway", sans-serif;
-  font-size: 36px !important ;
+  font-size: 16px !important ;
   font-weight: 400;
   letter-spacing: 3px;
   color: $color-secundario;
@@ -560,7 +560,7 @@ a {
 .rainbow{
   background-color: #e2e2e2;
   border-radius: 4px;  
-  color: #ff4500;
+  color: #3E527A;
   cursor: pointer;
   padding: 8px 16px;
   box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.3);
